--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "### 面向问题 采用Vuex后MVC模式导致前端查询属性数据来源对应的接口麻烦的问题；尤其公共接口，不熟悉的同学要一遍遍找后端同学确定，很多无用功；",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "serve": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -13,6 +14,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "rollup": "^2.47.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-uglify": "^6.0.4"
+  },
+  "dependencies": {
+    "call-ide": "^1.0.0",
+    "clipboard": "^2.0.8",
+    "copy-to-clipboard": "^3.3.1",
+    "shelljs": "^0.8.4"
+  },
   "bugs": {
     "url": "https://github.com/Sympath/vuex-debug-plugin/issues"
   },
