--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "rollup-plugin-uglify": "^6.0.4"
   },
   "dependencies": {
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
+    "@vue/babel-preset-jsx": "^1.2.4",
     "call-ide": "^1.0.0",
     "clipboard": "^2.0.8",
     "copy-to-clipboard": "^3.3.1",
